Adding FuelEstimationService for approximate calculations, adjusted RouteCalculationService and DTO's to support new info